# hog2

apps/game1/: AStarOpenList.cpp  AStarOpenList.h  AStar_.cpp  AStar_.h  CMakeLists.txt  CMakeLists_gpu.txt  GameController.cpp  GameController.h  JsonParser.cpp  JsonParser.h  Logger.cpp  Logger.h  Makefile  TestResult.h  change_file_paths.patch  cmake_gpu_eureka.patch  coordinatesUtil.cpp  coordinatesUtil.h  enemyLocator.cpp  enemyLocator.h  example  example.cbp  example.cpp  findPath.cpp  findPath.h  fixedobstacles.cpp  fixedobstacles.h  gameConstants.h  gameEnv.cpp  gameEnv.h  gameSimulation.cpp  gameSimulation.h  job.sh  node_.cpp  node_.h  objectLocator.cpp  objectLocator.h  observation.cpp  observation.h  player.cpp  (+9 more)
apps/game1/DQN/: DQNNet.cpp  DQNNet.h  DQN_interface.h  RLNN_Agent.cpp  RLNN_Agent.h  ReplayMemory.cpp  ReplayMemory.h
apps/game1/DQN/DDQN/: DQNNet.cpp  DQNNet.h  RLNN_Agent.cpp
apps/game1/DQN/Vanilla-DQN/: DQNNet.cpp  DQNNet.h  RLNN_Agent.cpp  RLNN_Agent.h
apps/game1/DQN/dueling-DQN/: DQNNet.cpp  DQNNet.h  RLNN_Agent.cpp  RLNN_Agent.h
apps/game1/DQN/dueling-DQN-bounded/: DQNNet.cpp  DQNNet.h  RLNN_Agent.cpp  RLNN_Agent.h
apps/game1/FOV_CNN/: CNN_controller.cpp  CNN_controller.h  FOV_Filters.cpp  FOV_Filters.h
apps/game1/UI/: SimpleUIView.cpp  SimpleUIView.h  TileMap.h
apps/game1/enemy/: enemy.cpp  enemy.h  enemyUIData.h  fixedEnemy.cpp  fixedEnemy.h
apps/game1/resources/model/vanilla-DQN/model/: m_conv1.pt  m_sequential.pt
apps/game1/test/: AStarChase_test.cpp  AStar_test.cpp  AbstractAStar_test.cpp  BaseLine_Agent.cpp  CMakeCache.txt  CMakeLists.txt  CNN_test.cpp  CTestTestfile.cmake  Enemy_test.cpp  ExampleTests  ExampleTests[1]_include.cmake  ExampleTests[1]_tests.cmake  FOV_Filter_test.cpp  FullTrainingSingleAgent.cpp  GameMaps_test.cpp  Logging_test.cpp  Makefile  Observation_test.cpp  cmake_install.cmake  example_tests.cbp  gameSimulation_test.cpp  replayMemory_test.cpp  testing.h
apps/game1/test/googletest/: CMakeLists.txt  googletest-distribution.cbp
apps/game1/test/googletest/docs/: advanced.md
apps/game1/test/googletest/googlemock/: gmock.cbp
apps/game1/test/googletest/googletest/: gtest.cbp
